src/app/globals.scss
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');

:root {
  --color-blue: #1B53BC;
  --color-light: #999FAB;
  --color-grey: #999FAB;
  --color-warning: #FF800B;
  --color-warning-hover: #FFDFC2;
  --color-danger: #F3244A;
  --color-transparent: transparent;
  --ff: 'Montserrat', sans-serif;
  --fs: 15px;
  --gap: 10px;
  --container: 980px;
  --paragraph: 24px;
}


html[data-theme="light"],
body[data-theme="light"] {
  --color-background: #fff;
  --color-bg: #FAFAFA;
  --color-line: #F0F0F0;
  --color-black: #000;
  --color-white: #fff;
  --color-svg: #1B53BC;
  --color-btn: #1B53BC;
  --color-btnTextWhite: #fff;
  --color-btnTextDark: #000;
}
html[data-theme="dark"],
body[data-theme="dark"] {
  --color-background: #151515;
  --color-bg: #232323;
  --color-line: #454545;
  --color-black: #d5d5d5;
  --color-white: #151515;
  --color-svg: #fff;
  --color-btn: #FF800B;
  --color-btnTextWhite: #fff;
  --color-btnTextDark: #fff;
}

.theme-transitions-enabled,
.theme-transitions-enabled * {
  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
}


* {
  box-sizing: border-box;
}

body {
  background: var(--color-background);
  color: var(--color-black);
  font-family: var(--ff);
  font-size: var(--fs);
  line-height: 18px;
  font-weight: 500;
  margin: 0;
  &.modalOpened {
    height: 100%;
    overflow: hidden;
  }
  &.night {
    background: #151515;
  }
}
p, ol, ul {
  margin: 0 0 var(--paragraph);
}
.text-center { text-align: center; }
.text-right { text-align: right; }
.mb-visible { display: none; }

.grid {
  display: grid;
  grid-column-gap: var(--gap);
  grid-row-gap: var(--gap);
  &-2 { grid-template-columns: repeat(2, 1fr); }
  &-4 { grid-template-columns: repeat(4, 1fr); }
  &-5 { grid-template-columns: repeat(5, 1fr); }
  &-6 { grid-template-columns: repeat(6, 1fr); }
  &.gap {
    grid-column-gap: 40px;
  }
}

.app {
  max-width: var(--container);
  margin: 0 auto;
  padding: 24px 0 44px;

  img { max-width: 100%; }
  h1 {
    font-size: 36px;
    line-height: 42px;
    font-weight: 700;
    margin: 0;
  }
  h2 {
    font-size: 22px;
    font-weight: 500;
    line-height: 26px;
    margin: 0 0 32px;
  }

  &-calc {
    background: var(--color-bg);
    border-radius: 10px;
    margin: 0 0 48px;
    padding: var(--gap);
    width: 100%;
  }
  &-header {
    align-items: center;
    display: flex;
    margin: 0 0 30px;
    h1 { margin-right: auto; }
    button, a { margin-left: 10px; }
  }
  &box {
    background: var(--color-white);
    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.03);
    border-radius: 5px;
    padding: 30px;
    &.mb { margin-bottom: 10px; }
    &-footer {
      align-items: center;
      display: flex;
      justify-content: space-between;
    }
    &-total {
      font-size: 18px;
      font-weight: 500;
    }
    &-sizes { padding: 2px !important; }
    &-fields {
      padding: 36px 20px 36px 10px;
    }
  }
  &-metal .appbox {
    &:nth-child(1) { grid-area: 1 / 1 / 2 / 2; }
    &:nth-child(2) { grid-area: 1 / 2 / 2 / 3; }
    &:nth-child(3) { grid-area: 2 / 1 / 3 / 3; }
  }
}

/* app-paint */
.app-paint {
  .appbox:nth-child(1) { grid-area: 1 / 1 / 2 / 2; }
  .appbox:nth-child(2) { grid-area: 1 / 2 / 2 / 3; }
  .appbox:nth-child(3) { grid-area: 2 / 1 / 3 / 3; }
}


/* Shapes Icons */
.cornerIcon { background-image: url('/assets/corner.svg'); }
.sheetIcon { background-image: url('/assets/sheet.svg'); }
.pipeIcon { background-image: url('/assets/pipe.svg'); }
.circleIcon { background-image: url('/assets/circle.svg'); }
.pipe-squareIcon { background-image: url('/assets/pipe-square.svg'); }
.shwellIcon { background-image: url('/assets/square.svg'); }
.squareIcon { background-image: url('/assets/shwell.svg'); }
.ribbonIcon { background-image: url('/assets/ribbon.svg'); }
.railIcon { background-image: url('/assets/rail.svg'); }
.corner6Icon { background-image: url('/assets/corner6.svg'); }
.deleteIcon { background-image: url('/assets/trash.svg'); }
.closeIcon { background-image: url('/assets/close.svg'); }
.infoIcon { background-image: url('/assets/info.svg'); }
.shareIcon { background-image: url('/assets/share.svg'); }
.menuIcon { background-image: url('/assets/bars.svg'); }
.downloadIcon { background-image: url('/assets/file.svg'); background-size: 22px !important; }
.calcMetalIcon {
  background-image: url('/assets/calc-metal.svg'); background-size: 24px !important;
  &.active { background-image: url('/assets/calc-metal-white.svg'); }
}
.calcSprayIcon {
  background-image: url('/assets/calc-spray.svg'); background-size: 24px !important;
  &.active { background-image: url('/assets/calc-spray-white.svg'); }
}
.calcMetalIcon, .calcSprayIcon {
  &.active { background-color: var(--color-btn); }
}

.switchIcon {
  background-image: url('/assets/moon-white.svg');
  &.active { background-image: url('/assets/sun.svg'); }
}
.selectArrow {
  background: var(--color-bg);
  background-image: url('/assets/chevron.svg');
  background-position: calc(100% - 14px) center;
  background-repeat: no-repeat;
  background-size: 10px;
}

input[type="checkbox"] { background-image: url(/assets/check.svg); }

/* dark theme */
body[data-theme="dark"] {
  .infoIcon { background-image: url('/assets/info-white.svg'); }
  .deleteIcon { background-image: url('/assets/trash-white.svg'); background-color: var(--color-bg); }
  .selectArrow { background-image: url('/assets/chevron-white.svg'); }
  .shareIcon { background-image: url('/assets/share-white.svg'); }
  .menuIcon { background-image: url('/assets/bars-white.svg'); }
  .calcMetalIcon { background-image: url('/assets/calc-metal-white.svg'); }
  .calcSprayIcon { background-image: url('/assets/calc-spray-white.svg'); }
  .downloadIcon { background-image: url('/assets/file-white.svg'); }
  input[type="checkbox"] { background-image: url(/assets/check-white.svg); }
}


/* Viewscreen */
.viewscreen {
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  &-corner { background-image: url('/assets/imgs/corner-image.webp'); }
  &-pipe { background-image: url('/assets/imgs/pipe-image.webp'); }
  &-pipe-square { background-image: url('/assets/imgs/pipe-square-image.webp'); }
  &-sheet { background-image: url('/assets/imgs/sheet-image.webp'); }
  &-circle { background-image: url('/assets/imgs/circle-image.webp'); }
  &-shwell { background-image: url('/assets/imgs/shwell-image.webp'); }
  &-square { background-image: url('/assets/imgs/square-image.webp'); }
  &-ribbon { background-image: url('/assets/imgs/ribbon-image.webp'); }
  &-rail { background-image: url('/assets/imgs/rail-image.webp'); }
  &-corner6 { background-image: url('/assets/imgs/corner6-image.webp'); }
}



/* Responsive */
@media screen and (max-width: 1020px) {
  .grid-tb-1 { grid-template-columns: repeat(1, 1fr); }
  .app {
    max-width: 676px;
    &-header {
      h1 { margin: 0 0 10px; }
    }
    &box { grid-area: auto !important; }
  }
}


@media screen and (max-width: 720px) {
  :root {
    --fs: 14px;
  }
  .grid-mb-1 { grid-template-columns: repeat(1, 1fr); }
  .mb-margin { margin-bottom: 15px; }
  .mb-visible { display: block; }
  .app {
    max-width: none;
    margin: 0 15px;
    h1 { font-size: 18px; line-height: 20px; }
    h2 { font-size: 18px; line-height: 22px; margin: 0 0 20px; }
    &-header {
      margin: 0 0 20px;
      h1 { margin: 0 auto 0 0; }
    }
    &box {
      padding: 15px;
      &-total { font-size: 16px; }
    }
  }
}

